force-app/main/default/objects/Account/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <inlineHelpText>The DUNS number is a nine-digit number, issued by D&amp;B, assigned to each business location in the D&amp;B database, having a unique, separate, and distinct operation for the purpose of identifying them.</inlineHelpText>
    <label>DUNS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>