force-app/main/default/objects/Account/fields/Link_to_Sharepoint__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Sharepoint__c</fullName>
    <label>Link to Sharepoint</label>
    <type>Url</type>
</CustomField>