force-app/main/default/objects/Account/fields/Main_Pains__c.field-meta.xml
<CustomField>
    <fullName>Main_Pains__c</fullName>
    <label>Main Pains</label>
    <type>TextArea</type>
</CustomField>