force-app/main/default/objects/Account/fields/Match_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Match_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MatchBillingAddress</label>
    <type>Checkbox</type>
</CustomField>