force-app/main/default/objects/Account/fields/Nip__c.field-meta.xml
<CustomField>
    <fullName>Nip__c</fullName>
    <label>Nip Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>