force-app/main/default/objects/Account/fields/Total_Number_of_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Open_Opportunities__c</fullName>
    <label>Total Number of Open Opportunities</label>
    <summaryForeignKey>OpportunityProject__c.Account_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>