force-app/main/default/objects/Account/fields/TotalOpportunityValue__c.field-meta.xml
<CustomField>
    <fullName>TotalOpportunityValue__c</fullName>
    <label>TotalOpportunityValue</label>
    <summaryForeignKey>OpportunityProject__c.Account_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>