force-app/main/default/objects/Account/listViews/Channel_Customers.listView-meta.xml
<ListView>
    <fullName>Channel_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>CustomerPriority__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Customer - Channel</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>equals</operation>
        <value>Province equals WA,OR,CA</value>
    </filters>
    <label>Channel Customers</label>
</ListView>